Alignment fix attempt 10

--- a/app/style.css
+++ b/app/style.css
@@ -23,9 +23,7 @@ body {
 
 html, body {
     overflow: hidden;
-    height: 100%;
-    height: -webkit-fill-available;
-    /* Fallback for Safari */
+    min-height: 100vh;
 }
 
 /* Body styling to mimic a CRT terminal */
@@ -79,7 +77,7 @@ body::before {
 }
 
 .choices {
-    height: 100px;
+    height: 130px;
     display: flex;
     justify-content: center;
     gap: 1%;
@@ -253,8 +251,6 @@ img:hover {
     padding: 10px;
     border-top: 2px solid #00FF00;
     /* Changed from relative to fixed */
-    bottom: 0;
-    /* Stick to the bottom */
     width: 100%;
     text-shadow: 0 0 5px #00FF00, 0 0 10px #00FF00;
     animation: flicker 0.2s infinite;
